2016-09-28  Jakub Jelinek  <jakub@redhat.com>

	PR c++/77467
	* g++.dg/cpp1y/constexpr-77467.C: New test.

2016-09-28  Martin Sebor  <msebor@redhat.com>

	PR c/77762
	* gcc.dg/tree-ssa/builtin-sprintf-warn-1.c (test_vsnprintf_chk_s):
	Call __builtin___vsnprintf_chk, not __builtin___snprintf_chk.
	(test_sprintf_p_const): Adjust line numbers to avoid failures
	introduced in r240503.

2016-09-28  Martin Sebor  <msebor@redhat.com>

	PR middle-end/77683
	* gcc.dg/tree-ssa/builtin-sprintf-warn-1.c: Add test cases.

2016-09-28  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR c++/77748
	* g++.dg/pr77550.C: Avoid undefined behavior.

	* gcc.dg/tree-ssa/pr68198.c: Fix dg-final.

2016-09-28  Wilco Dijkstra  <wdijkstr@arm.com>

	* gcc.dg/strlenopt-20.c: Update test.
	* gcc.dg/strlenopt-21.c: Likewise.
	* gcc.dg/strlenopt-22.c: Likewise.
	* gcc.dg/strlenopt-22g.c: Likewise.
	* gcc.dg/strlenopt-26.c: Likewise.
	* gcc.dg/strlenopt-5.c: Likewise.
	* gcc.dg/strlenopt-7.c: Likewise.
	* gcc.dg/strlenopt-9.c: Likewise.

2016-09-27  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/cpp1z/feat-cxx1z.C: Add __cpp_capture_star_this test.

	* g++.dg/cpp1z/lambda-this1.C: New test.
	* g++.dg/cpp1z/lambda-this2.C: New test.

	PR c++/77722
	* g++.dg/ubsan/return-4.C: New test.
	* g++.dg/ubsan/return-5.C: New test.
	* g++.dg/ubsan/return-6.C: New test.

2016-09-27  Jiong Wang  <jiong.wang@arm.com>

	* lib/target-supports.exp
	(check_effective_target_arm_v8_2a_fp16_scalar_hw): Delete redundant word
	in function comment.

2016-09-27  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/46266
	* lib/gcov.exp: Verify that <built-in>.gcov file is not
	considered.

2016-09-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/77745
	* g++.dg/torture/pr77745.C: New testcase.

2016-09-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/77478
	* gcc.dg/torture/pr77478.c: New testcase.

2016-09-27  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/7970
	PR gcov-profile/16855