@@ -1,3 +1,8 @@
+2016-09-28  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libgfortran/77707
+	* gfortran.dg/inquire_17.f90: New test.
+
 2016-09-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/77467
